[package]
name = "fast_transit_network"
version = "0.1.0"
edition = "2024"
default-run = "fast_transit_network"

[[bin]]
name = "tool"
path = "src/tool.rs"

[dependencies]
rayon = "1.8"          
clap = { version = "4.4", features = ["derive"] }  
anyhow = "1.0"        

[dev-dependencies]
criterion = "0.5"       
